# Myveryhonesthomework

./: README.md
Home_Lube1/: home_lube1.ipynb
Home_Lube2/: home_lube2.ipynb
Home_Lube3/: home_lube3.ipynb  pyproject.toml
Home_Lube4/: home_lube4.ipynb
Home_Lube5/: home_lube5.ipynb
Home_Lube6/: home_lube6.ipynb
