[project]
name = "ghfjgfjgh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pip>=25.2",
    "plotly>=6.3.1",
    "rich>=14.1.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
]
